--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -200,7 +200,7 @@ nav {
   .menu {
     position: fixed;
     top: 0;
-    right: 0;
+    right: -100%;
     width: 60%;
     height: 100vh;
     background-color: rgba(9, 9, 11, 0.98);
@@ -210,13 +210,8 @@ nav {
     align-items: center;
     justify-content: center;
     font-size: 24px;
-    transition: transform 0.4s ease;
-    transform: translateX(100%);
-    z-index: 999999;
-
-    &.active {
-      transform: translateX(0);
-    }
+    transition: right 0.4s ease;
+    z-index: 9999;
 
     a {
       display: none;
@@ -230,5 +225,8 @@ nav {
         display: initial;
       }
     }
+  }
+  .menu.active {
+    right: 0;
   }
 }
