--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -22,7 +22,7 @@ body {
   overflow-x: hidden;
   background-color: #09090b;
   color: #ffffff;
-  zoom: 1.1;
+  // zoom: 1.1;
   transform-origin: top left;
 }
 
