--- a/client/src/routes/login/login.scss
+++ b/client/src/routes/login/login.scss
@@ -19,14 +19,14 @@
       max-width: 400px;
       padding: 20px;
 
-      input{
+      input:not([type="password"]) {
         padding: 20px;
         border: 1px solid gray;
         border-radius: 5px;
         font-size: 16px; // Prevent zoom on mobile
       }
 
-      button{
+      button {
         padding: 20px;
         border-radius: 5px;
         border: none;
@@ -36,17 +36,17 @@
         cursor: pointer;
         font-size: 16px;
 
-        &:disabled{
-          background-color: #BED9D8;
+        &:disabled {
+          background-color: #bed9d8;
           cursor: not-allowed;
         }
       }
 
-      span{
+      span {
         color: rgba(255, 0, 0, 0.591);
       }
 
-      a{
+      a {
         font-size: 14px;
         color: gray;
         border-bottom: 1px solid gray;
@@ -61,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     img {
       width: 100%;
     }
@@ -74,19 +74,19 @@
   @include sm {
     flex-direction: column;
     height: 100vh;
-    
+
     .formContainer {
       flex: 1;
       padding: 10px;
-      
+
       form {
         max-width: 100%;
         padding: 10px;
-        
+
         input {
           padding: 15px;
         }
-        
+
         button {
           padding: 15px;
         }
