--- a/client/src/routes/register/register.scss
+++ b/client/src/routes/register/register.scss
@@ -19,7 +19,7 @@
       max-width: 400px;
       padding: 20px;
 
-      input {
+      input:not([type="password"]) {
         padding: 20px;
         border: 1px solid gray;
         border-radius: 5px;
@@ -61,7 +61,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     img {
       width: 100%;
     }
@@ -74,19 +74,19 @@
   @include sm {
     flex-direction: column;
     height: 100vh;
-    
+
     .formContainer {
       flex: 1;
       padding: 10px;
-      
+
       form {
         max-width: 100%;
         padding: 10px;
-        
+
         input {
           padding: 15px;
         }
-        
+
         button {
           padding: 15px;
         }
