--- a/client/src/components/passwordInput/passwordInput.scss
+++ b/client/src/components/passwordInput/passwordInput.scss
@@ -22,18 +22,18 @@
   .toggleButton {
     position: absolute;
     right: 12px;
-    background: transparent;
+    background: none;
     border: none;
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: teal;
+    color: gray;
     padding: 5px;
     transition: color 0.2s ease;
 
     &:hover {
-      color: #008080;
+      color: teal;
     }
 
     &:focus {
